# Study

./: Cargo.toml
UI/study/: Cargo.toml
UI/study-derive/src/: data.rs  lens.rs
UI/study-derive/tests/ui/: with-enum.rs  with-snake_case.rs
UI/study-shell/examples/: invalidate.rs  quit.rs  shello.rs
UI/study-shell/src/: application.rs  clipboard.rs  dialog.rs  scale.rs  window.rs
UI/study-shell/src/backend/mac/: application.rs  window.rs
UI/study-shell/src/backend/wayland/: error.rs  events.rs
UI/study-shell/src/backend/wayland/surfaces/: buffers.rs  layershell.rs
UI/study-shell/src/backend/windows/: window.rs
UI/study-shell/src/backend/x11/: application.rs  mod.rs
UI/study/examples/: anim.rs  calc.rs  cursor.rs  custom_widget.rs  either.rs  event_viewer.rs  flex.rs  game_of_life.rs  hello.rs  image.rs  multiwin.rs  panels.rs  readme.md  styled_text.rs  sub_window.rs  svg.rs  tabs.rs  timer.rs  transparency.rs  view_switcher.rs  widget_gallery.rs
UI/study/examples/hello_web/: Cargo.toml  README.md
UI/study/examples/hello_web/src/: lib.rs
UI/study/examples/value_formatting/: Cargo.toml
UI/study/examples/value_formatting/src/: main.rs
UI/study/examples/web/: Cargo.toml
UI/study/src/: box_constraints.rs  command.rs  dialog.rs  env.rs  lib.rs  main.rs  mouse.rs  theme.rs  window.rs
UI/study/src/lens/: lens.rs  mod.rs
UI/study/src/tests/: helpers.rs
UI/study/src/text/: input_methods.rs
UI/study/src/widget/: aspect_ratio_box.rs  button.rs  image.rs  maybe.rs  padding.rs  painter.rs  spinner.rs  svg.rs  value_textbox.rs  widget_ext.rs
intercepter/: Cargo.toml
intercepter/src/: main.rs
study/: Cargo.toml
study-derive/: Cargo.toml  README.md
study-derive/src/: attr.rs  lib.rs
study-derive/tests/: data.rs  ignore.rs  lens_generic.rs  with_lens.rs  with_same.rs
study-derive/tests/ui/: lens-attributes.rs  simple-lens.rs  with-empty-struct.rs  with-tuple-struct.rs  with-union.rs
study-shell/: Cargo.toml  README.md
study-shell/examples/: edit_text.rs  perftest.rs
study-shell/src/: hotkey.rs  lib.rs  text.rs
study-shell/src/backend/gtk/: application.rs  window.rs
study-shell/src/backend/mac/: mod.rs
study-shell/src/backend/wayland/: keyboard.rs
study-shell/src/backend/windows/: mod.rs  util.rs
study-shell/src/backend/x11/: util.rs  window.rs
study/examples/: async_event.rs  blocking_function.rs  disabled.rs  identity.rs  invalidation.rs  layout.rs  lens.rs  list.rs  markdown_preview.rs  open_save.rs  scroll.rs  scroll_colors.rs  slider.rs  split_demo.rs  switches.rs  text.rs  textbox.rs
study/examples/value_formatting/: README.md
study/examples/value_formatting/src/: formatters.rs  widgets.rs
study/examples/web/: README.md  build.rs
study/src/: app.rs  contexts.rs  core.rs  data.rs  event.rs  localization.rs  sub_window.rs  win_handler.rs
study/src/menu/: mod.rs
study/src/tests/: harness.rs  mod.rs
study/src/text/: attribute.rs  input_component.rs  mod.rs  rich_text.rs  storage.rs
study/src/widget/: align.rs  controller.rs  env_scope.rs  flex.rs  label.rs  lens_wrap.rs  scope.rs  slider.rs  tabs.rs  view_switcher.rs
