[package]
name = "study"
version = "1.0.0"
license = "Apache-2.0"
authors = ["Lucian Czerny <lucian@iamlucian.cz>, Louis Levar <arithmetified@gmail.com>"]
description = "Study helper's built in Study Assisster"
edition = "2018"

[dependencies]
openssl = "0.10.30"
httparse = "1.3.4"
bytes = "0.5.4"
http = "0.2.1"
futures = "0.3.5"
native-tls = "^0.2"
tokio-native-tls = "0.3.0"
log = "^0.4"
thiserror = "^1.0"
simple_logger = "^1.11"
tower = "^0.4"

[dependencies.tokio]
version = "^1.2"
features = ["macros", "rt-multi-thread", "io-util", "net", "time", "sync"]

[dependencies.tokio-util]
version = "^0.6"
features = ["codec"]

[dependencies.hyper]
version = "^0.14.3"
features = ["stream", "tcp", "client", "server", "http1"]

[dev-dependencies]
argh = "^0.1"
simple_logger = "^1.11"
har = "^0.5"
cookie = "^0.15"
run_script = "^0.6"
tokio-test = "^0.4"
reqwest = "^0.11.4" 
rand = "^0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies.warp]
version = "0.3"
features = ["tls"]