[package]
name = "study-derive"
version = "0.4.0"
license = "Apache-2.0"

edition = "2018"

[lib]
proc-macro = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-pc-windows-msvc"

[dependencies]
syn = "1.0.39"
quote = "1.0.7"
proc-macro2 = "1.0.19"

[dev-dependencies]
study = { version = "0.7.0", path = "../study" }
trybuild = "1.0"

float-cmp = { version = "0.8.0", features = ["std"], default-features = false }
