[package]
name = "study"
version = "1.0.0"
license = "Apache-2.0"
authors = ["Lucian Czerny <lucian@iamlucian.cz>, Louis Levar <arithmetified@gmail.com>"]
description = "Study helper's build in calculator"
edition = "2018"

[package.metadata.docs.rs]
# The "svg" and "image" features have doc clashes that cause undefined output in docs.
# See https://github.com/rust-lang/cargo/issues/6313 for more information.
# Once cargo doc becomes smart enough to handle multiple versions of the same crate,
# the "svg" and "image" features should be enabled for the docs.rs output.
features = ["im"]
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-pc-windows-msvc"
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=examples"]

[features]
default = ["gtk"]
gtk = ["study-shell/gtk"]
image = ["study-shell/image"]
svg = ["usvg"]
x11 = ["study-shell/x11"]
# **WARNING** not ready for the prime time. Many things don't work yet.
wayland = ["study-shell/wayland"]
crochet = []
serde = ["im/serde", "study-shell/serde"]

# Implement HasRawWindowHandle for WindowHandle
raw-win-handle = ["study-shell/raw-win-handle"]

# passing on all the image features. AVIF is not supported because it does not
# support decoding, and that's all we use `Image` for.
png = ["study-shell/image_png"]
jpeg = ["study-shell/jpeg"]
jpeg_rayon = ["study-shell/jpeg_rayon"]
gif = ["study-shell/gif"]
bmp = ["study-shell/bmp"]
ico = ["study-shell/ico"]
tiff = ["study-shell/tiff"]
webp = ["study-shell/webp"]
pnm = ["study-shell/pnm"]
dds = ["study-shell/dds"]
tga = ["study-shell/tga"]
farbfeld = ["study-shell/farbfeld"]
dxt = ["study-shell/dxt"]
hdr = ["study-shell/hdr"]

# Remember to update this when changing an image feature.
image-all = ["image", "svg", "png", "jpeg", "jpeg_rayon", "gif", "bmp", "ico", "tiff", "webp", "pnm", "dds", "tga", "farbfeld", "dxt", "hdr"]

[dependencies]
study-shell = { version = "0.7.0", default-features = false, path = "../study-shell" }
study-derive = { version = "0.4.0", path = "../study-derive" }

tracing = { version = "0.1.22" }
tracing-subscriber = { version = "0.3.2", features = ["fmt", "ansi"], default-features = false }
fluent-bundle = "0.15.1"
fluent-langneg = "0.13.0"
fluent-syntax = "0.11.0"
unic-langid = "0.9.0"
unicode-segmentation = "1.6.0"
xi-unicode = "0.3.0"
fnv = "1.0.7"
instant = { version = "0.1.6", features = ["wasm-bindgen"] }

# Optional dependencies
chrono = { version = "0.4.19", optional = true }
im = { version = "15.0.0", optional = true }
usvg = { version = "0.14.1", optional = true }

[target.'cfg(target_arch="wasm32")'.dependencies]
tracing-wasm = { version = "0.2.0" }
console_error_panic_hook = { version = "0.1.6" }

[dev-dependencies]
float-cmp = { version = "0.8.0", features = ["std"], default-features = false }
# tempfile 3.2.0 broke wasm; I assume it will be yanked (Jan 12, 2021)
tempfile = "=3.1.0"
piet-common = { version = "=0.5.0", features = ["png"] }
pulldown-cmark = { version = "0.8", default-features = false }
test-log = { version = "0.2.5", features = ["trace"], default-features = false }
# test-env-log needs it
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }

[target.'cfg(not(target_arch="wasm32"))'.dev-dependencies]
open = "1.6"

