[package]
name = "study-web-examples"
version = "0.1.0"
license = "Apache-2.0"
description = "Scaffolding for study web examples"
repository = "https://github.com/linebender/study"

publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
study = { path="../..", features = ["im", "image", "png"] }
tracing = "0.1.22"
wasm-bindgen = "0.2.67"
console_error_panic_hook = "0.1.6"
log = "0.4.11"
instant = { version = "0.1.6", features = ["wasm-bindgen"] }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
simple_logger = { version = "1.9.0", default-features = false }
